# CustomTCP

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/client/: Client.cpp  sample.txt
src/common/: CustomTCP.cpp  CustomTCP.h  Protocol.cpp  Protocol.h  StandardTCP.cpp  StandardTCP.h
src/server/: Server.cpp
testing/: CMakeLists.txt
testing/tests/: CMakeLists.txt  ClientTests.cpp  StandardTcpTests.cpp  TestAll.cpp
